@@ -19,7 +19,6 @@ import org.modelmapper.ModelMapper;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import java.util.Arrays;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -56,8 +55,8 @@ public class GameServiceTest {
   @Before
   public void prepareGameTest() {
     //Create new players
-    Player playerOne = new Player("ABC", PLAYER_ONE_NUM);
-    Player playerTwo = new Player("XYZ", PLAYER_TWO_NUM);
+    var playerOne = new Player("ABC", PLAYER_ONE_NUM);
+    var playerTwo = new Player("XYZ", PLAYER_TWO_NUM);
     //Create new game
     game = new Game(playerOne, playerTwo);
     game.setId(UUID.randomUUID());
@@ -65,8 +64,6 @@ public class GameServiceTest {
     //Setup mocking
     when(gameRepository.findById(game.getId())).thenReturn(Optional.of(game));
     when(gameRepository.save(game)).thenReturn(game);
-    when(playerService.getPlayerByGame(game, PLAYER_ONE_NUM)).thenReturn(game.getPlayerOne());
-    when(playerService.getPlayerByGame(game, PLAYER_TWO_NUM)).thenReturn(game.getPlayerTwo());
   }
 
   private void verifyGameTest(Game game, int expectedPlayerOneScore, int expectedPlayerTwoScore, List<Integer> expectedBoard) {
@@ -82,7 +79,9 @@ public class GameServiceTest {
   public void playerOnePickFirstMoveFirstPitTest() {
     gameServiceImpl.pick(game.getId(), PLAYER_ONE_NUM, 0);
     verifyGameTest(game, 1, 0,
-            new LinkedList<Integer>(Arrays.asList(0, 7, 7, 7, 7, 7, 6, 6, 6, 6, 6, 6)));
+            List.of(0, 7, 7, 7, 7, 7, 6, 6, 6, 6, 6, 6));
+
+    String testAbhi = null;
   }
 
   /**
@@ -92,7 +91,7 @@ public class GameServiceTest {
   public void playerTwoPickFirstMoveFirstPitTest() {
     gameServiceImpl.pick(game.getId(), PLAYER_TWO_NUM, 6);
     verifyGameTest(game, 0, 1,
-            new LinkedList<Integer>(Arrays.asList(6, 6, 6, 6, 6, 6, 0, 7, 7, 7, 7, 7)));
+            List.of(6, 6, 6, 6, 6, 6, 0, 7, 7, 7, 7, 7));
   }
 
   /**
@@ -102,7 +101,7 @@ public class GameServiceTest {
   public void playerOnePickFirstMoveSixthPitTest() {
     gameServiceImpl.pick(game.getId(), PLAYER_ONE_NUM, 5);
     verifyGameTest(game, 1, 0,
-            new LinkedList<Integer>(Arrays.asList(6, 6, 6, 6, 6, 0, 7, 7, 7, 7, 7, 6)));
+            List.of(6, 6, 6, 6, 6, 0, 7, 7, 7, 7, 7, 6));
   }
 
   /**
@@ -112,7 +111,7 @@ public class GameServiceTest {
   public void playerTwoPickFirstMoveSixthPitTest() {
     gameServiceImpl.pick(game.getId(), PLAYER_TWO_NUM, 11);
     verifyGameTest(game, 0, 1,
-            new LinkedList<Integer>(Arrays.asList(7, 7, 7, 7, 7, 6, 6, 6, 6, 6, 6, 0)));
+            List.of(7, 7, 7, 7, 7, 6, 6, 6, 6, 6, 6, 0));
   }
 
   /**
@@ -124,7 +123,7 @@ public class GameServiceTest {
     game.getBoard().set(0, 14); //Set the highest number on the first pit of player 1
     gameServiceImpl.pick(game.getId(), PLAYER_ONE_NUM, 0);
     verifyGameTest(game, 1, 0,
-            new LinkedList<Integer>(Arrays.asList(1, 8, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7)));
+            List.of(1, 8, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7));
   }
 
   /**
@@ -136,7 +135,7 @@ public class GameServiceTest {
     game.getBoard().set(6, 14); //Set the highest number on the first pit of player 1
     gameServiceImpl.pick(game.getId(), PLAYER_TWO_NUM, 6);
     verifyGameTest(game, 0, 1,
-            new LinkedList<Integer>(Arrays.asList(7, 7, 7, 7, 7, 7, 1, 8, 7, 7, 7, 7)));
+            List.of(7, 7, 7, 7, 7, 7, 1, 8, 7, 7, 7, 7));
   }
 
   /**
@@ -148,11 +147,11 @@ public class GameServiceTest {
    */
   @Test
   public void playerOneLastStoneInEmptyPitTest() {
-    game.setBoard(new LinkedList<Integer>(Arrays.asList(3, 6, 6, 0, 6, 6, 1, 2, 3, 4, 5, 6)));
+    game.setBoard(Arrays.asList(3, 6, 6, 0, 6, 6, 1, 2, 3, 4, 5, 6));
     gameServiceImpl.pick(game.getId(), PLAYER_ONE_NUM, 0);
     //Player 1's expected score: 3 from player 2's fourth pit + 1 from his/her fourth pit
     verifyGameTest(game, 4, 0,
-            new LinkedList<Integer>(Arrays.asList(0, 7, 7, 0, 6, 6, 1, 2, 0, 4, 5, 6)));
+            List.of(0, 7, 7, 0, 6, 6, 1, 2, 0, 4, 5, 6));
   }
 
   /**
@@ -164,11 +163,11 @@ public class GameServiceTest {
    */
   @Test
   public void playerTwoLastStoneInEmptyPitTest() {
-    game.setBoard(new LinkedList<Integer>(Arrays.asList(1, 2, 3, 4, 5, 6, 3, 6, 6, 0, 6, 6)));
+    game.setBoard(Arrays.asList(1, 2, 3, 4, 5, 6, 3, 6, 6, 0, 6, 6));
     gameServiceImpl.pick(game.getId(), PLAYER_TWO_NUM, 6);
     //Player 2's expected score: 3 from player 1's fourth pit + 1 from his/her fourth pit
     verifyGameTest(game, 0, 4,
-            new LinkedList<Integer>(Arrays.asList(1, 2, 0, 4, 5, 6, 0, 7, 7, 0, 6, 6)));
+            List.of(1, 2, 0, 4, 5, 6, 0, 7, 7, 0, 6, 6));
   }
 
   /**
@@ -179,12 +178,12 @@ public class GameServiceTest {
    */
   @Test
   public void playerOneWinsWithAllEmptyPitsTest() {
-    game.setBoard(new LinkedList<Integer>(Arrays.asList(0, 0, 3, 1, 0, 0, 0, 0, 0, 0, 4, 12)));
+    game.setBoard(Arrays.asList(0, 0, 3, 1, 0, 0, 0, 0, 0, 0, 4, 12));
     game.getPlayerOne().setScore(33);
     game.getPlayerTwo().setScore(19);
     gameServiceImpl.pick(game.getId(), PLAYER_TWO_NUM, 10);
     verifyGameTest(game, 39, 33,
-            new LinkedList<Integer>(Arrays.asList(1, 1, 3, 1, 0, 0, 0, 0, 0, 0, 0, 13)));
+            List.of(1, 1, 3, 1, 0, 0, 0, 0, 0, 0, 0, 13));
     assertEquals(game.getStatus(), GameStatus.END.getName());
     assertEquals(game.getWinner(), game.getPlayerOne());
   }
